fix overflow issue on site header

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -103,28 +103,6 @@
         }
     }
 
-    @keyframes menuFadeOut {
-        from {
-            transform: scale(1);
-            opacity: 1;
-        }
-        to {
-            transform: scale(1.2);
-            opacity: 0;
-        }
-    }
-
-    @keyframes menuFadeIn {
-        from {
-            transform: scale(1.2);
-            opacity: 0;
-        }
-        to {
-            transform: scale(1);
-            opacity: 1;
-        }
-    }
-
     &__menu-content {
         position: relative;
         display: flex;
@@ -132,7 +110,8 @@
         justify-content: center;
         align-items: center;
         opacity: 0;
-        animation: menuFadeOut .3s ease-out;
+        transform: scale(1.2);
+        transition: transform .3s ease-out, opacity .3s ease-out;
         padding-top: 100px;
         z-index: -10;
         
@@ -152,7 +131,5 @@
         opacity: 1;
         transform: scale(1);
         z-index: 1;
-        
-        animation: menuFadeIn .3s ease-out;
     }
 }
