--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -3,6 +3,7 @@
     padding-right: 18px;
     max-width: 1236px;
     margin: 0 auto;
+    overflow: hidden;
 
     &--medium {
         max-width: 976px;
